<resources>
    <string name="app_name">Timbra Cartellini</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_entra">Timbra entrata</string>
    <string name="action_uscita">Timbra uscita</string>
    <string name="action_statistiche">Ricalcola posizione</string>
    <string name="error_incorrect_password">Password non corretta</string>
    <string name="error_field_required">Questo campo non può essere lasciato vuoto</string>
    <string name="username_errato">L\'username inserito non esiste</string>
    <string name="login">Login</string>
    <string name="contratto">Premendo su Login verrà inviato anche l\'IMEI cifrato del tuo dispotivo, non sarà possibile risalire al tuo vero IMEI e non verrà mai pubblicato. Sarà utilizzato solo per scopi di controllo. </string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_causali">Causali</string>
    <string name="title_activity_report">Report</string>
    <string name="explanation">Hai bisogno di comunicare qualcosa riguardo la tua timbratura?\n\nIn caso negativo lascia tutto in bianco</string>
    <string name="explanation_hint">Digita qui la tua comunicazione in massimo 500 caratteri</string>
</resources>
